# apollo-io-mcp-server

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  pytest.ini
apollo_mcp_server/: __init__.py  __main__.py  cli_main.py  client.py  config.py  server.py
apollo_mcp_server/tools/: companies.py  people.py
tests/: conftest.py  test_cli.py  test_client.py  test_tools_companies.py  test_tools_people.py
